goti stand colour change

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
 .goti-stand {
   height: 20px;
   width: 20px;
-  background-color: aqua;
+  background-color: white;
   border-radius: 50%;
   border: 3px black solid;
   position: absolute;
