--- a/style.css
+++ b/style.css
@@ -373,3 +373,19 @@ body {
     right: -6px;
   }
 }
+
+.comeOnStand {
+  animation: scaleUpDown 0.6s ease-in-out forwards; /* Animation with smooth transition */
+}
+
+@keyframes scaleUpDown {
+  0% {
+    transform: scale(1); /* Initial size */
+  }
+  50% {
+    transform: scale(1.2); /* Scale up to 120% */
+  }
+  100% {
+    transform: scale(1); /* Scale back to original size */
+  }
+}
